--- a/development.html
+++ b/development.html
@@ -409,3 +409,49 @@
 
 </body>
 </html>
+
+
+<!--
+Matlab
+NI - labview
+NI - multisim
+
+Rubie
+Java
+Javascript
+PHP
+React
+Swift
+-->
+
+<!--
+<img src="https://d3g2zn2nj8ejos.cloudfront.net/images/elements/lessons/paper_clip.svg" width="24">
+<img src="https://d3g2zn2nj8ejos.cloudfront.net/images/elements/articles/share.svg" width="24">
+<img src="https://d3g2zn2nj8ejos.cloudfront.net/images/elements/lessons/download.svg" width="24">
+-->
+
+<!--
+*
+Ανάπτυξη διαδικτυακών εφαρμογών (Web Development) με χρήση Python.
+Δημιουργία δυναμικών ιστοσελίδων με χρήση Python στο BackEnd
+Δημιουργία εφαρμογών με Arduino.
+Χρήσιμες εφαρμογές που μπορούμε να υλοποιήσουμε στο σπίτι μας, με χρήση συσκευής Arduino
+Ανάπτυξη ιστοσελίδων με το Wordpress.
+Δημιουργία δυναμικών ιστοσελίδων με χρήση Wordpress, του πιο διαδεδομένου εργαλείου διαχείρισης περιεχομένου.
+Εισαγωγή στο Machine Learning
+Μπαίνουμε στον κόσμο του Machine Learning, κατασκευάζοντας μικρά προγράμματα με χρήση βιβλιοθηκών της Python
+Εισαγωγή στην ανάπτυξη ANDROID εφαρμογών
+Εισαγωγή στη γλώσσα προγραμματισμού PHP
+Προχωρημένος προγραμματισμός με τη γλώσσα προγραμματισμού Java
+Εισαγωγή στις βάσεις δεδομένων με τη MySQL
+Εισαγωγή στις βάσεις δεδομένων με τη MongoDB
+Εισαγωγή στη γλώσσα προγραμματισμού R για εφαρμογές στατιστικής
+Θεωρία αλγορίθμων
+Data Science με Python
+Δημιουργία παραθυρικών εφαρμογών με PyQt
+Εισαγωγή στον προγραμματισμό με το Scratch
+Εισαγωγή στις βασικές έννοιες προγραμματισμού.
+Εισαγωγή στη χρήση υπολογιστών και στις εφαρμογές γραφείου.
+Σχεδιασμός Ιστοσελίδων με το Bootstrap
+*
+-->
