Add meta refresh to redirect to new URL

--- a/ardu22.html
+++ b/ardu22.html
@@ -1,4 +1,5 @@
- 
+ <meta http-equiv="Refresh" content="1;url=https://alexandroshub.github.io/arduino"><!DOCTYPE html>
+
 <!--==========================================================================
 	  ▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █  🅐🅛🅔🅧🅐🅝🅓🅡🅞🅢 🅗🅤🅑  
             
