--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <title>𝗔𝗹𝗽𝗵𝗮𝗣𝗶 𝑎𝑢𝑡𝑜𝑚𝑎𝑡𝑖𝑜𝑛𝑠 𝑛' 𝑚𝑜𝑟𝑒 : The Digital Future</title>
   <link rel="icon" href="https://64.media.tumblr.com/9afce4a8d742ee60acbad9323d33dc5d/44cd2a580847b444-aa/s540x810/e1584500e44e11d32058f0df0cf743b29b3468f3.pnj" type="image/png">
   <head>	  
+	  <meta name="google-adsense-account" content="ca-pub-3825551173179723"><!-- google adds  --> 
 <link rel="canonical" href="https://alexandroshub.github.io/index.html" />
 <!-- Global site tag (gtag.js) - Google Analytics --> <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128580719-1"></script><script> window.dataLayer = window.dataLayer || [];  function gtag(){dataLayer.push(arguments);}  gtag('js', new Date());  gtag('config', 'UA-128580719-1');</script>
   <!--  /////// meta information  /////// -->
