Change Robotics icon from Android to Cogs

--- a/LV3.html
+++ b/LV3.html
@@ -404,7 +404,7 @@ background: linear-gradient(to right, #1b2a4a, #2d2d30);
             <li class="divider"></li>
             <li class="dropdown-header">Automations</li>
             <li><a href="https://alexandroshub.github.io/iot.html"><i class="fa fa-wifi"></i>&nbsp; IoT</a></li>
-<li><a href="https://alexandroshub.github.io/robotics.html"><i class="fa fa-android"></i>&nbsp; Robotics</a></li>
+<li><a href="https://alexandroshub.github.io/robotics.html"><i class="fa fa-cogs"></i>&nbsp; Robotics</a></li>
             <li><a href="https://alexandroshub.github.io/ai.html">   <i class="fa fa-cogs"></i>&nbsp; AI</a></li>
             <li><a href="https://alexandroshub.github.io/ardu22.html"><i class="fa fa-microchip"></i>&nbsp; Arduino</a></li>
             <li><a href="https://alexandroshub.github.io/raspberrypi"><i class="fa  fa-microchip"></i>&nbsp; Raspberry Pi</a></li>
