--- a/welcome21.html
+++ b/welcome21.html
@@ -1,3 +1,6 @@
+
+<meta http-equiv="Refresh" content="1;url=https://alexandroshub.github.io/welcome26.html">
+
 <!--==========================================================================
   ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
   ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
