--- a/plus.ap.html
+++ b/plus.ap.html
@@ -1,3 +1,6 @@
+
+<meta http-equiv="Refresh" content="5;url=https://alexandroshub.github.io/hub">
+
 <!--========================================================================== 
       ▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █ 
 
