--- a/hub.html
+++ b/hub.html
@@ -1,12 +1,24 @@
+<!-- ==========================================================================
+	  ▞▚ ▙▄ ▛ █▬█ ▞▚ ▛ █  ғʀᴏᴍ ɪᴅᴇᴀ ᴛᴏ ᴀᴜᴛᴏᴍᴀᴛɪᴏɴ ᴀɴᴅ ʙᴇʏᴏɴᴅ
+	  Ｃｏｎｎｅｃｔ Ｃｏｄｅ Ｃｒｅａｔｅ  🅐🅛🅔🅧🅐🅝🅓🅡🅞🅢 🅗🅤🅑 
+
+	  Welcome in my personal website Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou Hosted by Github
+      Website: https://alexandroshub.github.io |  Updated: v3.2 1/26
+      Contact: a-papaspyrou@outlook.com.gr  |  Mob: 	+30 694 054 8867
+     
+	▄▀█ █░░ █▀▀ ▀▄▀ ▄▀█ █▄░█ █▀▄ █▀█ █▀█ █▀   █░█ █░█ █▄▄
+	█▀█ █▄▄ ██▄ █░█ █▀█ █░▀█ █▄▀ █▀▄ █▄█ ▄█   █▀█ █▄█ █▄█
+	“When I let go of what I am, I become what I might be.” ~ Lao Tzu.
+
+ａｌｐｈａｐｉ．ｈｕｂ
+==========================================================================   -->
 <!DOCTYPE html>
 <html lang="el">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>alphapi.hub | AlexandrosHub – Technology, Creativity & Beyond</title>
-    <!-- ===== ΑΝΑΦΟΡΑ ΣΤΟ ΠΡΩΤΟΤΥΠΟ ===== -->
     <!-- Εμπνευσμένο & βασισμένο στο: https://alexandroshub.github.io/ -->
-    <!-- Μετατροπή σε πλήρη, σύγχρονο web hub με όλο το υλικό και το πνεύμα της αρχικής σελίδας. -->
     <!-- ================================= -->
     <link rel="icon" type="image/x-icon" href="https://alexandroshub.github.io/favicon.ico">
     <!-- Fonts -->
@@ -709,6 +721,20 @@
                             <img src="https://img.youtube.com/vi/L0xdHHDSy7U/0.jpg" alt="Video Thumb">
                             <p>Covid19: Επικοινωνία</p>
                         </div>
+                        <div class="video-thumb" data-video="yzvFTPM21bs">
+                            <img src="https://img.youtube.com/vi/yzvFTPM21bs/0.jpg" alt="Video Thumb">
+                            <p>Ανθρώπινος Βιοϋπολογιστής & Κοσμοθεωρίες</p>
+                        </div>
+                          <div class="video-thumb" data-video="vgc45flSp9o">
+                            <img src="https://img.youtube.com/vi/vgc45flSp9o/0.jpg" alt="Video Thumb">
+                            <p>▶ [Title not retrieved]</p>
+                        </div>  <div class="video-thumb" data-video="2sx1h14Sl8M">
+                            <img src="https://img.youtube.com/vi/2sx1h14Sl8M/0.jpg" alt="Video Thumb">
+                            <p>▶ [Title not retrieved]</p>
+                        </div>  <div class="video-thumb" data-video="SeMzW2psBvA">
+                            <img src="https://img.youtube.com/vi/SeMzW2psBvA/0.jpg" alt="Video Thumb">
+                            <p>▶ [Title not retrieved]</p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -772,6 +798,10 @@
                             <p class="link-desc">Widely trusted for strong encryption and sleek UX.</p>
                         </div>
                     </div>
+              <br>      <p>"The Web without links is like a world without roads." <font color="#FF5733"><a href="https://saveyourinternet.eu/">#saveyourinternet</a> </font>  </p>
+<iframe style="border: 0; width: 100%; height: 450px;" allowfullscreen frameborder="0" src="https://raindrop.io/alexispapy/alpha-pi-65259675/embed"></iframe>
+  
+
                 </div>
             </section>
 
