Add promotional buttons with styles to CV
Added promotional buttons with styles for primary and secondary actions.

--- a/mycv.html
+++ b/mycv.html
@@ -1,10 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alexandros Papaspyrou - CV</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+<link rel="icon" href="https://64.media.tumblr.com/9afce4a8d742ee60acbad9323d33dc5d/44cd2a580847b444-aa/s540x810/e1584500e44e11d32058f0df0cf743b29b3468f3.pnj" type="image/png">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -314,6 +317,49 @@
     </style>
 </head>
 <body>
+
+<style>
+.promo-button {
+  display: inline-block;
+  padding: 12px 24px;
+  background: linear-gradient(to right, #1e9bff, #00d4aa);
+  color: white;
+  text-decoration: none;
+  border-radius: 6px;
+  font-weight: bold;
+  font-size: 1em;
+  transition: opacity 0.3s ease;
+}
+
+.promo-button:hover {
+  opacity: 0.85;
+}
+
+/* Secondary CTA */
+.promo-button-secondary {
+  display: inline-block;
+  padding: 12px 24px;
+  background: #ffffff;                /* neutral background */
+  color: #1e9bff;                     /* text in primary palette */
+  border: 2px solid #1e9bff;          /* subtle border */
+  border-radius: 6px;
+  font-weight: bold;
+  font-size: 1em;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+.promo-button-secondary:hover {
+  background: #f0f9ff;                /* light hover fill */
+  color: #00d4aa;                     /* shift to secondary palette */
+  border-color: #00d4aa;
+}
+
+</style>
+<br> <a href="https://alexandroshub.github.io" class="promo-button">
+ ⬅️ <strong>AlphaPi</strong></a>
+
+<a href="https://alexandroshub.github.io/emailform" class="promo-button-secondary"><strong>💬 Στείλτε Μήνυμα</strong></a>
+<br> <br>
     <div class="cv-container">
         <header class="header">
             <div class="header-content">
