Update footer dates and add privacy links

--- a/home26.html
+++ b/home26.html
@@ -1,8 +1,9 @@
+
 <!--==========================================================================
 	  ▞▚ ▙▄ ▛ █▬█ ▞▚ ▛ █  ғʀᴏᴍ ɪᴅᴇᴀ ᴛᴏ ᴀᴜᴛᴏᴍᴀᴛɪᴏɴ ᴀɴᴅ ʙᴇʏᴏɴᴅ
 	  Ｃｏｎｎｅｃｔ Ｃｏｄｅ Ｃｒｅａｔｅ  🅐🅛🅔🅧🅐🅝🅓🅡🅞🅢 🅗🅤🅑 
 
-Updated: v3.3 2/10/2026 - Mobile Fixed + SEO Enhanced
+Updated: v3.3 14/10/2026 - Mobile Fixed + SEO Enhanced
 ==========================================================================   -->
 <!DOCTYPE html>
 <html lang="el">
@@ -1828,7 +1829,9 @@ Updated: v3.3 2/10/2026 - Mobile Fixed + SEO Enhanced
                         Handcrafted With ❤️ (CC)-By: Alexandros Papaspyrou<br>
                         Hosted by Github • Updated: 2/10/2026<br>
                         <a href="https://alexandroshub.github.io/welcome26.html" title="Visit AlexandrosHub" style="background: linear-gradient(90deg, #1e9bff, #00d4aa); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 900;">▞▚ ▛</a> • 
-                        <a href="https://www.patreon.com/profile/creators?u=7495321" style="background: linear-gradient(90deg, #1e9bff, #00d4aa); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 900;"><b>support</b></a>
+                        <a href="https://www.patreon.com/profile/creators?u=7495321" style="background: linear-gradient(90deg, #1e9bff, #00d4aa); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 900;"><b>support</b></a> • 
+                        <a href="https://alexandroshub.github.io/privacy.html" style="background: linear-gradient(90deg, #1e9bff, #00d4aa); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 900;"><b>privacy</b></a> • 
+                        <a href="https://alexandroshub.github.io/apTOU" style="background: linear-gradient(90deg, #1e9bff, #00d4aa); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 900;"><b>ToU</b></a>
                     </p>
                 </div>
                 
