Update title and links in art_walkingman.html

--- a/art_walkingman.html
+++ b/art_walkingman.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walking Man - Alexandros Papaspyrou</title>
+ 
+    <title>AlphaPi Art | Walking Man - Alexandros Papaspyrou </title>
+    
+    <!-- Favicon -->
+    <link rel="icon" href="https://64.media.tumblr.com/9afce4a8d742ee60acbad9323d33dc5d/44cd2a580847b444-aa/s540x810/e1584500e44e11d32058f0df0cf743b29b3468f3.pnj" type="image/png">
+    <link rel="apple-touch-icon" href="https://64.media.tumblr.com/9afce4a8d742ee60acbad9323d33dc5d/44cd2a580847b444-aa/s540x810/e1584500e44e11d32058f0df0cf743b29b3468f3.pnj">
+
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     
     <style>
@@ -121,8 +127,11 @@
                 <button class="btn btn-outline" onclick="shareArt()">Share</button>
             </div>
 
-            <a href="https://www.nationalgallery.gr/artwork/kopela-sto-parathyro/" target="_blank" style="display:block; margin-top:40px; color: var(--accent-color); text-decoration: none; font-size: 13px; font-weight: 700;">
+            <a href="https://alexandroshub.github.io/atelie.html" target="_blank" style="display:block; margin-top:40px; color: var(--accent-color); text-decoration: none; font-size: 13px; font-weight: 700;">
                 VIEW MORE AT GALLERY →
+            </a>
+                <a href="https://alexandroshub.github.io/" target="_blank" style="display:block; margin-top:40px; color: var(--accent-color); text-decoration: none; font-size: 13px; font-weight: 700;">
+               GO BACK TO HOMEPAGE →
             </a>
         </section>
     </main>
