Update title and artwork details in atelie.html

--- a/atelie.html
+++ b/atelie.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALPHA PI | Official Art Gallery</title>
+    <title>AlphaPi Art | Official Art Gallery </title>
+    
+    <!-- Favicon -->
+    <link rel="icon" href="https://64.media.tumblr.com/9afce4a8d742ee60acbad9323d33dc5d/44cd2a580847b444-aa/s540x810/e1584500e44e11d32058f0df0cf743b29b3468f3.pnj" type="image/png">
+    <link rel="apple-touch-icon" href="https://64.media.tumblr.com/9afce4a8d742ee60acbad9323d33dc5d/44cd2a580847b444-aa/s540x810/e1584500e44e11d32058f0df0cf743b29b3468f3.pnj">    
     <link href="https://fonts.googleapis.com/css2?family=GFS+Didot&family=Montserrat:wght@200;300;500&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -207,13 +211,13 @@
 
     <div id="menu-overlay">
         <ul class="menu-links">
-            <li><a href="#" onclick="toggleMenu()">ΑΡΧΙΚΗ</a></li>
-            <li><a href="mailto:contact@alphapi.art" onclick="toggleMenu()">ΕΠΙΚΟΙΝΩΝΙΑ</a></li>
+            <li><a href="https://alexandroshub.github.io/" onclick="toggleMenu()">ΑΡΧΙΚΗ</a></li>
+            <li><a href="https://alexandroshub.github.io/#contact" onclick="toggleMenu()">ΕΠΙΚΟΙΝΩΝΙΑ</a></li>
         </ul>
     </div>
 
     <header>
-        <p>National Gallery Style Presentation</p>
+        <p>Gallery Art Presentation</p>
         <h1>Alpha Pi</h1>
     </header>
 
@@ -233,24 +237,24 @@
                 <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400_webp/9dfb2f218259611.67a74b235fa93.jpg" alt="Art 2">
             </div>
             <div class="label">
-                <h2>Chroma Drift</h2>
+                <h2>FOX</h2>
                 <p>Mixed Media Study</p>
             </div>
         </a>
 
-        <a href="#" class="art-portal portal-center">
+        <a href="https://alexandroshub.github.io/art_walkingman.html" class="art-portal portal-center">
             <div class="image-container">
                 <img src="https://mir-s3-cdn-cf.behance.net/project_modules/hd_webp/2b0f19218765537.67a748c14293c.jpg" alt="Art 3">
             </div>
             <div class="label">
-                <h2>Structural Silence</h2>
-                <p>Architectural Fine Art</p>
+                <h2>Walking Man</h2>
+                <p>Acrylic on Canvas</p>
             </div>
         </a>
     </main>
 
     <footer>      <p>α π</p>
-        <p>&copy; 2026 ALPHA PI ATELIER. ALL RIGHTS RESERVED.</p>
+        <p>&copy; 2026 ALPHA PI ART . ALL RIGHTS RESERVED.</p>
     </footer>
 
     <script>
